--- a/index.html
+++ b/index.html
@@ -76,3 +76,8 @@
     </footer>
 </body>
 </html>
+<section id="about">
+    <h2>Unsere Vision</h2>
+    <p>Unsere Partei setzt sich für eine nachhaltige Zukunft ein. Wir glauben an eine gerechte Gesellschaft, in der jeder Mensch die gleichen Chancen hat. Unser Ziel ist es, den Umweltschutz zu stärken und gleichzeitig soziale Gerechtigkeit zu fördern. Wir arbeiten hart daran, eine Welt zu schaffen, in der Wohlstand und Gerechtigkeit Hand in Hand gehen.</p>
+    <img src="https://www.example.com/images/umwelt.jpg" alt="Umweltschutz" width="500">
+</section>
