--- a/index.html
+++ b/index.html
@@ -55,3 +55,9 @@
             </ul>
         </nav>
     </header>
+<section id="about">
+    <h2>Die AFO für die Erneuerung des Strandbads Obertrum</h2>
+    <p>Die AFO (Allianz für Obertrum) setzt sich leidenschaftlich für die nachhaltige Weiterentwicklung unserer Gemeinde ein. Ein besonderes Anliegen ist uns dabei die Zukunft des Strandbads Obertrum. Als zentraler Erholungsort für die Bürger und Gäste ist es von großer Bedeutung, dass dieser Ort nicht nur erhalten bleibt, sondern auch modernisiert und an die Bedürfnisse der Zukunft angepasst wird.</p>
+    <p>Wir sind davon überzeugt, dass eine umfassende Erneuerung des Strandbads nicht nur die Lebensqualität der Anwohner steigert, sondern auch einen wichtigen Beitrag zur Attraktivität Obertrums als Tourismusdestination leistet. Durch die Verbesserung der Infrastruktur, die Förderung umweltfreundlicher Technologien und die Schaffung barrierefreier Zugänge möchten wir das Strandbad zu einem modernen, sicheren und nachhaltigen Treffpunkt für alle Generationen machen.</p>
+    <p>Die AFO steht für verantwortungsbewusste, zukunftsorientierte Politik und fordert daher eine umfassende Renovierung des Strandbads, die nicht nur kurzfristige Vorteile bringt, sondern langfristig zur Förderung des Gemeinschaftslebens und des Umweltschutzes beiträgt. Wir setzen uns dafür ein, dass Obertrum auch in Zukunft ein Ort ist, an dem jeder gerne Zeit verbringt und sich entfalten kann.</p>
+</section>
