--- a/index.html
+++ b/index.html
@@ -61,3 +61,13 @@
     <p>Wir sind davon überzeugt, dass eine umfassende Erneuerung des Strandbads nicht nur die Lebensqualität der Anwohner steigert, sondern auch einen wichtigen Beitrag zur Attraktivität Obertrums als Tourismusdestination leistet. Durch die Verbesserung der Infrastruktur, die Förderung umweltfreundlicher Technologien und die Schaffung barrierefreier Zugänge möchten wir das Strandbad zu einem modernen, sicheren und nachhaltigen Treffpunkt für alle Generationen machen.</p>
     <p>Die AFO steht für verantwortungsbewusste, zukunftsorientierte Politik und fordert daher eine umfassende Renovierung des Strandbads, die nicht nur kurzfristige Vorteile bringt, sondern langfristig zur Förderung des Gemeinschaftslebens und des Umweltschutzes beiträgt. Wir setzen uns dafür ein, dass Obertrum auch in Zukunft ein Ort ist, an dem jeder gerne Zeit verbringt und sich entfalten kann.</p>
 </section>
+<header>
+    <h1>Willkommen bei unserer Partei!</h1>
+    <nav>
+        <ul>
+            <li><a href="ueber-uns.html">Über uns</a></li>
+            <li><a href="themen.html">Themen</a></li>
+            <li><a href="kontakt.html">Kontakt</a></li>
+        </ul>
+    </nav>
+</header>
