--- a/index.html
+++ b/index.html
@@ -53,16 +53,144 @@
         </nav>
     </header>
 <section id="about">
-    <h2>Die AFO für die Erneuerung des Strandbads Obertrum</h2>
-    <p>Die AFO (Alternative für Obertrum) setzt sich leidenschaftlich für die nachhaltige Weiterentwicklung unserer Gemeinde ein. Ein besonderes Anliegen ist uns dabei die Zukunft des Strandbads Obertrum. Als zentraler Erholungsort für die Bürger und Gäste ist es von großer Bedeutung, dass dieser Ort nicht nur erhalten bleibt, sondern auch modernisiert und an die Bedürfnisse der Zukunft angepasst wird.</p>
-    <p>Wir sind davon überzeugt, dass eine umfassende Erneuerung des Strandbads nicht nur die Lebensqualität der Anwohner steigert, sondern auch einen wichtigen Beitrag zur Attraktivität Obertrums als Tourismusdestination leistet. Durch die Verbesserung der Infrastruktur, die Förderung umweltfreundlicher Technologien und die Schaffung barrierefreier Zugänge möchten wir das Strandbad zu einem modernen, sicheren und nachhaltigen Treffpunkt für alle Generationen machen.</p>
-    <p>Die AFO steht für verantwortungsbewusste, zukunftsorientierte Politik und fordert daher eine umfassende Renovierung des Strandbads, die nicht nur kurzfristige Vorteile bringt, sondern langfristig zur Förderung des Gemeinschaftslebens und des Umweltschutzes beiträgt. Wir setzen uns dafür ein, dass Obertrum auch in Zukunft ein Ort ist, an dem jeder gerne Zeit verbringt und sich entfalten kann.</p>
-</section>
-<header>
-    <h1>Willkommen bei unserer Partei!</h1>
-    <nav>
-        <ul>
-         
-        </ul>
-    </nav>
-</header>
+    <!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Willkommen bei AFO - Alternative für Obertrum</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        header {
+            background-color: #333;
+            color: white;
+            padding: 1rem;
+            text-align: center;
+        }
+
+        header nav ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        header nav ul li {
+            display: inline;
+            margin: 0 15px;
+        }
+
+        header nav ul li a {
+            color: white;
+            text-decoration: none;
+        }
+
+        section {
+            padding: 3rem 2rem;
+            margin: 2rem 0;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        h2 {
+            color: #333;
+        }
+
+        footer {
+            text-align: center;
+            padding: 1rem;
+            background-color: #333;
+            color: white;
+        }
+
+        .section-title {
+            font-size: 2rem;
+            margin-bottom: 20px;
+            text-align: center;
+        }
+
+        .content {
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>Willkommen bei AFO - Alternative für Obertrum</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">Über uns</a></li>
+                <li><a href="#statutes">Unsere Statuten</a></li>
+                <li><a href="#contact">Kontakt</a></li>
+                <li><a href="#strandbad">Erneuerung des Strandbads</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Über uns -->
+    <section id="about">
+        <div class="content">
+            <h2 class="section-title">Über uns</h2>
+            <p>Die AFO – Alternative für Obertrum ist eine politische Partei, die sich für die Verbesserung und Erneuerung der Gemeinde Obertrum einsetzt. Wir glauben an eine nachhaltige, gerechte und lebenswerte Zukunft für alle Bürgerinnen und Bürger. Unsere Vision ist es, Obertrum zu einem noch lebenswerteren Ort zu machen, der für alle Generationen attraktiv bleibt.</p>
+            <p>Die AFO setzt sich für Innovation, Fortschritt und den Schutz unserer Umwelt ein. Wir sind überzeugt, dass Veränderung möglich ist, wenn die richtigen Schritte getan werden, um die Lebensqualität für alle zu steigern.</p>
+        </div>
+    </section>
+
+    <!-- Unsere Statuten -->
+    <section id="statutes">
+        <div class="content">
+            <h2 class="section-title">Unsere Statuten</h2>
+            <p>Die AFO verpflichtet sich zu einer transparenten, demokratischen und fairen Politik. Unsere Statuten dienen als Grundlage für unsere Arbeit und legen die Prinzipien fest, nach denen wir handeln:</p>
+            <ul>
+                <li><strong>1. Nachhaltigkeit:</strong> Wir setzen uns für den Umweltschutz und nachhaltige Entwicklungen in Obertrum ein.</li>
+                <li><strong>2. Gerechtigkeit:</strong> Für uns sind soziale Gerechtigkeit und Chancengleichheit Grundwerte, die wir in allen Bereichen fördern wollen.</li>
+                <li><strong>3. Partizipation:</strong> Alle Bürgerinnen und Bürger sollen aktiv an der Gestaltung ihrer Gemeinde teilnehmen können.</li>
+                <li><strong>4. Innovation:</strong> Wir fördern neue Ideen und kreative Lösungen für die Herausforderungen unserer Zeit.</li>
+                <li><strong>5. Verantwortung:</strong> Die Verantwortung für die Gemeinde liegt in den Händen aller, und wir setzen uns für eine transparente Verwaltung ein.</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Kontakt -->
+    <section id="contact">
+        <div class="content">
+            <h2 class="section-title">Kontakt</h2>
+            <p>Wir freuen uns auf deine Nachrichten, Fragen und Anregungen. Du kannst uns auf den folgenden Wegen erreichen:</p>
+            <ul>
+                <li><strong>Adresse:</strong> Musterstraße 123, 5020 Obertrum</li>
+                <li><strong>Email:</strong> kontakt@afo-obertrum.de</li>
+                <li><strong>Telefon:</strong> +43 123 456 789</li>
+                <li><strong>Social Media:</strong> Folge uns auf unseren Social-Media-Kanälen:</li>
+                <ul>
+                    <li><a href="https://www.facebook.com/AFOObertrum" target="_blank">Facebook</a></li>
+                    <li><a href="https://twitter.com/AFOObertrum" target="_blank">Twitter</a></li>
+                </ul>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Erneuerung des Strandbads -->
+    <section id="strandbad">
+        <div class="content">
+            <h2 class="section-title">Erneuerung des Strandbads Obertrum</h2>
+            <p>Die AFO setzt sich für die umfassende Erneuerung und Verbesserung des Strandbads Obertrum ein. Wir möchten den Ort nicht nur für die lokale Gemeinschaft, sondern auch für Touristen zu einem noch attraktiveren Ziel machen.</p>
+            <p>Ein geplantes Projekt ist die Einführung eines Sprungturms und eines Wasserparcours, die sowohl Kindern als auch Erwachsenen viel Freude und Abwechslung bieten werden. Diese Neuerungen sollen das Strandbad zu einem modernen Freizeitort machen, der den Ansprüchen aller gerecht wird.</p>
+            <p>Unsere Vision ist es, das Strandbad als Zentrum der Erholung und des Sports zu etablieren, damit es auch in Zukunft ein Ort der Begegnung und Freude für alle Generationen bleibt.</p>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 AFO - Alternative für Obertrum. Alle Rechte vorbehalten.</p>
+    </footer>
+
+</body>
+</html>
+
