--- a/index.html
+++ b/index.html
@@ -165,11 +165,10 @@
             <h2 class="section-title">Kontakt</h2>
             <p>Wir freuen uns auf deine Nachrichten, Fragen und Anregungen. Du kannst uns auf den folgenden Wegen erreichen:</p>
             <ul>
-                <li><strong>Adresse:</strong> Musterstraße 123, 5020 Obertrum</li>
-                <li><strong>Email:</strong> kontakt@afo-obertrum.de</li>
-                <li><strong>Telefon:</strong> +43 123 456 789</li>
-                <li><strong>Social Media:</strong> Folge uns auf unseren Social-Media-Kanälen:</li>
-                <ul>
+                <
+                <li><strong>Email:</strong> nico.sng.5162@gmail.com</li>
+               
+              
                     <li><a href="https://www.facebook.com/AFOObertrum" target="_blank">Facebook</a></li>
                     <li><a href="https://twitter.com/AFOObertrum" target="_blank">Twitter</a></li>
                 </ul>
