--- a/index.html
+++ b/index.html
@@ -193,3 +193,200 @@
 </body>
 </html>
 
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Willkommen bei AFO - Alternative für Obertrum</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        header {
+            background-color: #333;
+            color: white;
+            padding: 1rem;
+            text-align: center;
+        }
+
+        header nav ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        header nav ul li {
+            display: inline;
+            margin: 0 15px;
+        }
+
+        header nav ul li a {
+            color: white;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        /* Das Modal (versteckt es zunächst) */
+        .modal {
+            display: none; 
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.4);
+            padding-top: 60px;
+        }
+
+        /* Modal-Inhalt */
+        .modal-content {
+            background-color: #fefefe;
+            margin: 5% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            max-width: 800px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Der "Schließen"-Button */
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        section {
+            padding: 3rem 2rem;
+            margin: 2rem 0;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        footer {
+            text-align: center;
+            padding: 1rem;
+            background-color: #333;
+            color: white;
+        }
+
+        .content {
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>Willkommen bei AFO - Alternative für Obertrum</h1>
+        <nav>
+            <ul>
+                <li><a onclick="openModal('aboutModal')">Über uns</a></li>
+                <li><a onclick="openModal('statutesModal')">Unsere Statuten</a></li>
+                <li><a onclick="openModal('contactModal')">Kontakt</a></li>
+                <li><a onclick="openModal('strandbadModal')">Erneuerung des Strandbads</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Über uns Modal -->
+    <div id="aboutModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('aboutModal')">&times;</span>
+            <h2>Über uns</h2>
+            <p>Die AFO – Alternative für Obertrum ist eine politische Partei, die sich für die Verbesserung und Erneuerung der Gemeinde Obertrum einsetzt. Wir glauben an eine nachhaltige, gerechte und lebenswerte Zukunft für alle Bürgerinnen und Bürger. Unsere Vision ist es, Obertrum zu einem noch lebenswerteren Ort zu machen, der für alle Generationen attraktiv bleibt.</p>
+            <p>Die AFO setzt sich für Innovation, Fortschritt und den Schutz unserer Umwelt ein. Wir sind überzeugt, dass Veränderung möglich ist, wenn die richtigen Schritte getan werden, um die Lebensqualität für alle zu steigern.</p>
+        </div>
+    </div>
+
+    <!-- Unsere Statuten Modal -->
+    <div id="statutesModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('statutesModal')">&times;</span>
+            <h2>Unsere Statuten</h2>
+            <p>Die AFO verpflichtet sich zu einer transparenten, demokratischen und fairen Politik. Unsere Statuten dienen als Grundlage für unsere Arbeit und legen die Prinzipien fest, nach denen wir handeln:</p>
+            <ul>
+                <li><strong>1. Nachhaltigkeit:</strong> Wir setzen uns für den Umweltschutz und nachhaltige Entwicklungen in Obertrum ein.</li>
+                <li><strong>2. Gerechtigkeit:</strong> Für uns sind soziale Gerechtigkeit und Chancengleichheit Grundwerte, die wir in allen Bereichen fördern wollen.</li>
+                <li><strong>3. Partizipation:</strong> Alle Bürgerinnen und Bürger sollen aktiv an der Gestaltung ihrer Gemeinde teilnehmen können.</li>
+                <li><strong>4. Innovation:</strong> Wir fördern neue Ideen und kreative Lösungen für die Herausforderungen unserer Zeit.</li>
+                <li><strong>5. Verantwortung:</strong> Die Verantwortung für die Gemeinde liegt in den Händen aller, und wir setzen uns für eine transparente Verwaltung ein.</li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- Kontakt Modal -->
+    <div id="contactModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('contactModal')">&times;</span>
+            <h2>Kontakt</h2>
+            <p>Wir freuen uns auf deine Nachrichten, Fragen und Anregungen. Du kannst uns auf den folgenden Wegen erreichen:</p>
+            <ul>
+                <li><strong>Adresse:</strong> Musterstraße 123, 5020 Obertrum</li>
+                <li><strong>Email:</strong> kontakt@afo-obertrum.de</li>
+                <li><strong>Telefon:</strong> +43 123 456 789</li>
+                <li><strong>Social Media:</strong> Folge uns auf unseren Social-Media-Kanälen:</li>
+                <ul>
+                    <li><a href="https://www.facebook.com/AFOObertrum" target="_blank">Facebook</a></li>
+                    <li><a href="https://twitter.com/AFOObertrum" target="_blank">Twitter</a></li>
+                </ul>
+            </ul>
+        </div>
+    </div>
+
+    <!-- Erneuerung des Strandbads Modal -->
+    <div id="strandbadModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('strandbadModal')">&times;</span>
+            <h2>Erneuerung des Strandbads Obertrum</h2>
+            <p>Die AFO setzt sich für die umfassende Erneuerung und Verbesserung des Strandbads Obertrum ein. Wir möchten den Ort nicht nur für die lokale Gemeinschaft, sondern auch für Touristen zu einem noch attraktiveren Ziel machen.</p>
+            <p>Ein geplantes Projekt ist die Einführung eines Sprungturms und eines Wasserparcours, die sowohl Kindern als auch Erwachsenen viel Freude und Abwechslung bieten werden. Diese Neuerungen sollen das Strandbad zu einem modernen Freizeitort machen, der den Ansprüchen aller gerecht wird.</p>
+            <p>Unsere Vision ist es, das Strandbad als Zentrum der Erholung und des Sports zu etablieren, damit es auch in Zukunft ein Ort der Begegnung und Freude für alle Generationen bleibt.</p>
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; 2025 AFO - Alternative für Obertrum. Alle Rechte vorbehalten.</p>
+    </footer>
+
+    <script>
+        // Modal öffnen
+        function openModal(modalId) {
+            document.getElementById(modalId).style.display = "block";
+        }
+
+        // Modal schließen
+        function closeModal(modalId) {
+            document.getElementById(modalId).style.display = "none";
+        }
+
+        // Wenn der Benutzer außerhalb des Modals klickt, wird es geschlossen
+        window.onclick = function(event) {
+            var modals = document.getElementsByClassName('modal');
+            for (var i = 0; i < modals.length; i++) {
+                if (event.target === modals[i]) {
+                    modals[i].style.display = "none";
+                }
+            }
+        }
+    </script>
+
+</body>
+</html>
