--- a/index.html
+++ b/index.html
@@ -166,11 +166,8 @@
             <p>Wir freuen uns auf deine Nachrichten, Fragen und Anregungen. Du kannst uns auf den folgenden Wegen erreichen:</p>
             <ul>
                 <
-                <li><strong>Email:</strong> nico.sng.5162@gmail.com</li>
+                <li><strong>Email:</strong> nico.sbg.5162@gmail.com</li>
                
-              
-                    <li><a href="https://www.facebook.com/AFOObertrum" target="_blank">Facebook</a></li>
-                    <li><a href="https://twitter.com/AFOObertrum" target="_blank">Twitter</a></li>
                 </ul>
             </ul>
         </div>
