--- a/index.html
+++ b/index.html
@@ -1,4 +1,89 @@
-   <p>&copy; 2025 AFO - Alternative für Obertrum. Alle Rechte vorbehalten.</p>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Willkommen bei AFO - Alternative für Obertrum</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        header {
+            background-color: #333;
+            color: white;
+            padding: 1rem;
+            text-align: center;
+        }
+
+        header nav ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        header nav ul li {
+            display: inline;
+            margin: 0 15px;
+        }
+
+        header nav ul li a {
+            color: white;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        section {
+            padding: 3rem 2rem;
+            margin: 2rem 0;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        footer {
+            text-align: center;
+            padding: 1rem;
+            background-color: #333;
+            color: white;
+        }
+
+        .content {
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>Willkommen bei AFO - Alternative für Obertrum</h1>
+        <nav>
+            <ul>
+                <li><a href="ueber-uns.html" target="_blank">Über uns</a></li>
+                <li><a href="statuten.html" target="_blank">Unsere Statuten</a></li>
+                <li><a href="kontakt.html" target="_blank">Kontakt</a></li>
+                <li><a href="strandbad.html" target="_blank">Erneuerung des Strandbads</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="content">
+        <h2>Unsere Partei setzt sich für die Erneuerung des Strandbads ein!</h2>
+        <p>Die AFO – Alternative für Obertrum engagiert sich für die Verbesserung und Erneuerung des Strandbads in Obertrum. Wir möchten den Standort modernisieren und attraktive neue Freizeitmöglichkeiten wie einen Sprungturm und Wasserparcours einführen, um das Strandbad für alle Generationen noch attraktiver zu gestalten.</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 AFO - Alternative für Obertrum. Alle Rechte vorbehalten.</p>
+    </footer>
+
+</body>
+</html>
+
+<p>&copy; 2025 AFO - Alternative für Obertrum. Alle Rechte vorbehalten.</p>
     </footer>
 
     <script>
@@ -28,11 +113,7 @@
 
 <!DOCTYPE html>
 <html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meine Partei Website</title>
-    <style>
+
         /* Einfaches Styling */
         body {
             font-family: Arial, sans-serif;
