--- a/index.html
+++ b/index.html
@@ -49,12 +49,6 @@
             background-color: #333;
             color: white;
         }
-
-        .content {
-            max-width: 800px;
-            margin: 0 auto;
-        }
-
     </style>
 </head>
 <body>
@@ -71,7 +65,7 @@
         </nav>
     </header>
 
-    <section class="content">
+    <section>
         <h2>Unsere Partei setzt sich für die Erneuerung des Strandbads ein!</h2>
         <p>Die AFO – Alternative für Obertrum engagiert sich für die Verbesserung und Erneuerung des Strandbads in Obertrum. Wir möchten den Standort modernisieren und attraktive neue Freizeitmöglichkeiten wie einen Sprungturm und Wasserparcours einführen, um das Strandbad für alle Generationen noch attraktiver zu gestalten.</p>
     </section>
@@ -82,221 +76,12 @@
 
 </body>
 </html>
-
-<p>&copy; 2025 AFO - Alternative für Obertrum. Alle Rechte vorbehalten.</p>
-    </footer>
-
-    <script>
-        // Modal öffnen
-        function openModal(modalId) {
-            document.getElementById(modalId).style.display = "block";
-        }
-
-        // Modal schließen
-        function closeModal(modalId) {
-            document.getElementById(modalId).style.display = "none";
-        }
-
-        // Wenn der Benutzer außerhalb des Modals klickt, wird es geschlossen
-        window.onclick = function(event) {
-            var modals = document.getElementsByClassName('modal');
-            for (var i = 0; i < modals.length; i++) {
-                if (event.target === modals[i]) {
-                    modals[i].style.display = "none";
-                }
-            }
-        }
-    </script>
-
-</body>
-</html>
-
-<!DOCTYPE html>
-<html lang="de">
-
-        /* Einfaches Styling */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        header {
-            background-color: #333;
-            color: white;
-            padding: 1rem;
-            text-align: center;
-        }
-        header nav ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        header nav ul li {
-            display: inline;
-            margin: 0 15px;
-        }
-        header nav ul li a {
-            color: white;
-            text-decoration: none;
-        }
-        section {
-            padding: 2rem;
-            margin: 1rem 0;
-            background-color: white;
-            border-radius: 8px;
-        }
-        footer {
-            text-align: center;
-            padding: 1rem;
-            background-color: #333;
-            color: white;
-               <li><a href="ueber-uns.html">Über uns</a></li>
-            <li><a href="themen.html">Themen</a></li>
-            <li><a href="kontakt.html">Kontakt</a></li>
-        }
-    </style>
-</head>
-<body>
-    <header>
-            </ul>
-        </nav>
-    </header>
-<section id="about">
-    <!DOCTYPE html>
-<html lang="de">
-<head>
-   
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-
-        header {
-            background-color: #333;
-            color: white;
-            padding: 1rem;
-            text-align: center;
-        }
-
-        header nav ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        header nav ul li {
-            display: inline;
-            margin: 0 15px;
-        }
-
-        header nav ul li a {
-            color: white;
-            text-decoration: none;
-        }
-
-        section {
-            padding: 3rem 2rem;
-            margin: 2rem 0;
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        h2 {
-            color: #333;
-        }
-
-        footer {
-            text-align: center;
-            padding: 1rem;
-            background-color: #333;
-            color: white;
-        }
-
-        .section-title {
-            font-size: 2rem;
-            margin-bottom: 20px;
-            text-align: center;
-        }
-
-        .content {
-            max-width: 800px;
-            margin: 0 auto;
-        }
-
-    </style>
-</head>
-<body>
-                <li><a href="#about">Über uns</a></li>
-                <li><a href="#statutes">Unsere Statuten</a></li>
-                <li><a href="#contact">Kontakt</a></li>
-                <li><a href="#strandbad">Erneuerung des Strandbads</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <!-- Über uns -->
-    <section id="about">
-        <div class="content">
-            <h2 class="section-title">Über uns</h2>
-            <p>Die AFO – Alternative für Obertrum ist eine politische Partei, die sich für die Verbesserung und Erneuerung der Gemeinde Obertrum einsetzt. Wir glauben an eine nachhaltige, gerechte und lebenswerte Zukunft für alle Bürgerinnen und Bürger. Unsere Vision ist es, Obertrum zu einem noch lebenswerteren Ort zu machen, der für alle Generationen attraktiv bleibt.</p>
-            <p>Die AFO setzt sich für Innovation, Fortschritt und den Schutz unserer Umwelt ein. Wir sind überzeugt, dass Veränderung möglich ist, wenn die richtigen Schritte getan werden, um die Lebensqualität für alle zu steigern.</p>
-        </div>
-    </section>
-
-    <!-- Unsere Statuten -->
-    <section id="statutes">
-        <div class="content">
-            <h2 class="section-title">Unsere Statuten</h2>
-            <p>Die AFO verpflichtet sich zu einer transparenten, demokratischen und fairen Politik. Unsere Statuten dienen als Grundlage für unsere Arbeit und legen die Prinzipien fest, nach denen wir handeln:</p>
-            <ul>
-                <li><strong>1. Nachhaltigkeit:</strong> Wir setzen uns für den Umweltschutz und nachhaltige Entwicklungen in Obertrum ein.</li>
-                <li><strong>2. Gerechtigkeit:</strong> Für uns sind soziale Gerechtigkeit und Chancengleichheit Grundwerte, die wir in allen Bereichen fördern wollen.</li>
-                <li><strong>3. Partizipation:</strong> Alle Bürgerinnen und Bürger sollen aktiv an der Gestaltung ihrer Gemeinde teilnehmen können.</li>
-                <li><strong>4. Innovation:</strong> Wir fördern neue Ideen und kreative Lösungen für die Herausforderungen unserer Zeit.</li>
-                <li><strong>5. Verantwortung:</strong> Die Verantwortung für die Gemeinde liegt in den Händen aller, und wir setzen uns für eine transparente Verwaltung ein.</li>
-            </ul>
-        </div>
-    </section>
-
-    <!-- Kontakt -->
-    <section id="contact">
-        <div class="content">
-            <h2 class="section-title">Kontakt</h2>
-            <p>Wir freuen uns auf deine Nachrichten, Fragen und Anregungen. Du kannst uns auf den folgenden Wegen erreichen:</p>
-            <ul>
-                <
-                <li><strong>Email:</strong> nico.sbg.5162@gmail.com</li>
-               
-                </ul>
-            </ul>
-        </div>
-    </section>
-
-    <!-- Erneuerung des Strandbads -->
-    <section id="strandbad">
-        <div class="content">
-            <h2 class="section-title">Erneuerung des Strandbads Obertrum</h2>
-            <p>Die AFO setzt sich für die umfassende Erneuerung und Verbesserung des Strandbads Obertrum ein. Wir möchten den Ort nicht nur für die lokale Gemeinschaft, sondern auch für Touristen zu einem noch attraktiveren Ziel machen.</p>
-            <p>Ein geplantes Projekt ist die Einführung eines Sprungturms und eines Wasserparcours, die sowohl Kindern als auch Erwachsenen viel Freude und Abwechslung bieten werden. Diese Neuerungen sollen das Strandbad zu einem modernen Freizeitort machen, der den Ansprüchen aller gerecht wird.</p>
-            <p>Unsere Vision ist es, das Strandbad als Zentrum der Erholung und des Sports zu etablieren, damit es auch in Zukunft ein Ort der Begegnung und Freude für alle Generationen bleibt.</p>
-        </div>
-    </section>
-
-    <footer>
-        <p>&copy; 2025 AFO - Alternative für Obertrum. Alle Rechte vorbehalten.</p>
-    </footer>
-
-</body>
-</html>
-
 <!DOCTYPE html>
 <html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Willkommen bei AFO - Alternative für Obertrum</title>
+    <title>Über uns - AFO</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -312,67 +97,11 @@
             text-align: center;
         }
 
-        header nav ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        header nav ul li {
-            display: inline;
-            margin: 0 15px;
-        }
-
-        header nav ul li a {
-            color: white;
-            text-decoration: none;
-            cursor: pointer;
-        }
-
-        /* Das Modal (versteckt es zunächst) */
-        .modal {
-            display: none; 
-            position: fixed;
-            z-index: 1;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgba(0, 0, 0, 0.4);
-            padding-top: 60px;
-        }
-
-        /* Modal-Inhalt */
-        .modal-content {
-            background-color: #fefefe;
-            margin: 5% auto;
-            padding: 20px;
-            border: 1px solid #888;
-            width: 80%;
+        .content {
+            padding: 2rem;
             max-width: 800px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        /* Der "Schließen"-Button */
-        .close {
-            color: #aaa;
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
-        }
-
-        .close:hover,
-        .close:focus {
-            color: black;
-            text-decoration: none;
-            cursor: pointer;
-        }
-
-        section {
-            padding: 3rem 2rem;
-            margin: 2rem 0;
+            margin: 0 auto;
             background-color: white;
-            border-radius: 8px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
@@ -382,83 +111,168 @@
             background-color: #333;
             color: white;
         }
-
-        .content {
-            max-width: 800px;
-            margin: 0 auto;
-        }
-
     </style>
 </head>
 <body>
 
     <header>
-        <h1>Willkommen bei AFO - Alternative für Obertrum</h1>
-        <nav>
-            <ul>
-                <li><a onclick="openModal('aboutModal')">Über uns</a></li>
-                <li><a onclick="openModal('statutesModal')">Unsere Statuten</a></li>
-                <li><a onclick="openModal('contactModal')">Kontakt</a></li>
-                <li><a onclick="openModal('strandbadModal')">Erneuerung des Strandbads</a></li>
-            </ul>
-        </nav>
+        <h1>Über uns</h1>
     </header>
 
-    <!-- Über uns Modal -->
-    <div id="aboutModal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('aboutModal')">&times;</span>
-            <h2>Über uns</h2>
-            <p>Die AFO – Alternative für Obertrum ist eine politische Partei, die sich für die Verbesserung und Erneuerung der Gemeinde Obertrum einsetzt. Wir glauben an eine nachhaltige, gerechte und lebenswerte Zukunft für alle Bürgerinnen und Bürger. Unsere Vision ist es, Obertrum zu einem noch lebenswerteren Ort zu machen, der für alle Generationen attraktiv bleibt.</p>
-            <p>Die AFO setzt sich für Innovation, Fortschritt und den Schutz unserer Umwelt ein. Wir sind überzeugt, dass Veränderung möglich ist, wenn die richtigen Schritte getan werden, um die Lebensqualität für alle zu steigern.</p>
-        </div>
-    </div>
-
-    <!-- Unsere Statuten Modal -->
-    <div id="statutesModal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('statutesModal')">&times;</span>
-            <h2>Unsere Statuten</h2>
-            <p>Die AFO verpflichtet sich zu einer transparenten, demokratischen und fairen Politik. Unsere Statuten dienen als Grundlage für unsere Arbeit und legen die Prinzipien fest, nach denen wir handeln:</p>
-            <ul>
-                <li><strong>1. Nachhaltigkeit:</strong> Wir setzen uns für den Umweltschutz und nachhaltige Entwicklungen in Obertrum ein.</li>
-                <li><strong>2. Gerechtigkeit:</strong> Für uns sind soziale Gerechtigkeit und Chancengleichheit Grundwerte, die wir in allen Bereichen fördern wollen.</li>
-                <li><strong>3. Partizipation:</strong> Alle Bürgerinnen und Bürger sollen aktiv an der Gestaltung ihrer Gemeinde teilnehmen können.</li>
-                <li><strong>4. Innovation:</strong> Wir fördern neue Ideen und kreative Lösungen für die Herausforderungen unserer Zeit.</li>
-                <li><strong>5. Verantwortung:</strong> Die Verantwortung für die Gemeinde liegt in den Händen aller, und wir setzen uns für eine transparente Verwaltung ein.</li>
-            </ul>
-        </div>
-    </div>
-
-    <!-- Kontakt Modal -->
-    <div id="contactModal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('contactModal')">&times;</span>
-            <h2>Kontakt</h2>
-            <p>Wir freuen uns auf deine Nachrichten, Fragen und Anregungen. Du kannst uns auf den folgenden Wegen erreichen:</p>
-            <ul>
-                <li><strong>Adresse:</strong> Musterstraße 123, 5020 Obertrum</li>
-                <li><strong>Email:</strong> kontakt@afo-obertrum.de</li>
-                <li><strong>Telefon:</strong> +43 123 456 789</li>
-                <li><strong>Social Media:</strong> Folge uns auf unseren Social-Media-Kanälen:</li>
-                <ul>
-                    <li><a href="https://www.facebook.com/AFOObertrum" target="_blank">Facebook</a></li>
-                    <li><a href="https://twitter.com/AFOObertrum" target="_blank">Twitter</a></li>
-                </ul>
-            </ul>
-        </div>
-    </div>
-
-    <!-- Erneuerung des Strandbads Modal -->
-    <div id="strandbadModal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('strandbadModal')">&times;</span>
-            <h2>Erneuerung des Strandbads Obertrum</h2>
-            <p>Die AFO setzt sich für die umfassende Erneuerung und Verbesserung des Strandbads Obertrum ein. Wir möchten den Ort nicht nur für die lokale Gemeinschaft, sondern auch für Touristen zu einem noch attraktiveren Ziel machen.</p>
-            <p>Ein geplantes Projekt ist die Einführung eines Sprungturms und eines Wasserparcours, die sowohl Kindern als auch Erwachsenen viel Freude und Abwechslung bieten werden. Diese Neuerungen sollen das Strandbad zu einem modernen Freizeitort machen, der den Ansprüchen aller gerecht wird.</p>
-            <p>Unsere Vision ist es, das Strandbad als Zentrum der Erholung und des Sports zu etablieren, damit es auch in Zukunft ein Ort der Begegnung und Freude für alle Generationen bleibt.</p>
-        </div>
+    <div class="content">
+        <h2>Unsere Vision</h2>
+        <p>Die AFO – Alternative für Obertrum ist eine politische Partei, die sich für die Verbesserung der Gemeinde Obertrum einsetzt. Wir arbeiten an konkreten Lösungen, die die Lebensqualität der Bürger steigern. Unser Fokus liegt auf nachhaltigem Wachstum, sozialer Gerechtigkeit und einer besseren Zukunft für alle.</p>
     </div>
 
     <footer>
+        <p>&copy; 2025 AFO - Alternative für Obertrum. Alle Rechte vorbehalten.</p>
+    </footer>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Unsere Statuten - AFO</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        header {
+            background-color: #333;
+            color: white;
+            padding: 1rem;
+            text-align: center;
+        }
+
+        .content {
+            padding: 2rem;
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: white;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        footer {
+            text-align: center;
+            padding: 1rem;
+            background-color: #333;
+            color: white;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>Unsere Statuten</h1>
+    </header>
+
+    <div class="content">
+        <h2>Unsere Prinzipien</h2>
+        <p>Unsere Partei basiert auf den Prinzipien der Nachhaltigkeit, Gerechtigkeit und Transparenz. Wir setzen uns für die Verbesserung der Gemeinde durch konkrete, praktikable Lösungen ein.</p>
+        <ul>
+            <li><strong>Nachhaltigkeit:</strong> Umweltschutz und ressourcenschonende Entwicklung.</li>
+            <li><strong>Gerechtigkeit:</strong> Für alle Bürger gleiche Chancen und Rechte.</li>
+            <li><strong>Transparenz:</strong> Offene und transparente Politik.</li>
+        </ul>
+    </div>
+
+    <footer>
+        <p>&copy; 2025 AFO - Alternative für Obertrum. Alle Rechte vorbehalten.</p>
+    </footer>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kontakt - AFO</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        header {
+            background-color: #333;
+            color: white;
+            padding: 1rem;
+            text-align: center;
+        }
+
+        .content {
+            padding: 2rem;
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: white;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        footer {
+            text-align: center;
+            padding: 1rem;
+            background-color: #333;
+            color: white;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>Kontakt</h1>
+    </header>
+
+    <div class="content">
+        <h2>So kannst du uns erreichen:</h2>
+        <p>Adresse: Musterstraße 123, 5020 Obertrum</p>
+        <p>Email: kontakt@afo-obertrum.de</p>
+        <p>Telefon: +43 123 456 789</p>
+    </div>
+
+    <footer>
+        <p>&copy; 2025 AFO - Alternative für Obertrum. Alle Rechte vorbehalten.</p>
+    </footer>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Erneuerung des Strandbads - AFO</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        header {
+            background-color: #333;
+            color: white;
+            padding: 1rem;
+            text-align: center;
+        }
+
+        .content {
+            padding: 2rem;
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: white;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+
      
