--- a/index.html
+++ b/index.html
@@ -274,5 +274,73 @@
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
-
-     
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="AFO - Alternative für Obertrum">
+    <meta name="description" content="Offizielle Website der AFO - Alternative für Obertrum">
+    <title>Willkommen bei der AFO - Alternative für Obertrum</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background: url('https://source.unsplash.com/1600x900/?beach') no-repeat center center fixed;
+            background-size: cover;
+            color: #333;
+        }
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+        .welcome-box {
+            background: rgba(128, 128, 128, 0.9);
+            padding: 20px 40px;
+            border-radius: 10px;
+            color: white;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 15px;
+            font-size: 18px;
+        }
+        nav {
+            margin-bottom: 20px;
+        }
+        .sponsors {
+            margin-top: auto;
+            background: rgba(255, 255, 255, 0.8);
+            padding: 10px;
+            border-radius: 5px;
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="welcome-box">
+            <h1>Willkommen bei der AFO</h1>
+            <p>Alternative für Obertrum</p>
+        </div>
+        <nav>
+            <a href="#statuten">Statuten</a>
+            <a href="#ueber-uns">Über uns</a>
+            <a href="#mitglieder">Mitglieder</a>
+            <a href="#was-wir-vorhaben">Was wir vorhaben</a>
+        </nav>
+        <div class="sponsors">
+            <p>Unsere Sponsoren:</p>
+            <p>SPAR | Unterbäck</p>
+            <p>Kontakt: <a href="mailto:nico.sbg.5162@gmail.com">nico.sbg.5162@gmail.com</a></p>
+        </div>
+    </div>
+</body>
+</html>
