--- a/index.html
+++ b/index.html
@@ -3,6 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>AFO - Alternative für Obertrum</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            font-family: Arial, sans-serif;
+            color: white;
+            background: url('https://source.unsplash.com/1600x900/?beach') no-repeat center center/cover;
+        }
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+        }
+        .content-box {
+            background: rgba(0, 0, 0, 0.7);
+            padding: 40px;
+            border-radius: 10px;
+            text-align: center;
+            max-width: 80%;
+        }
+        .nav-links {
+            margin-top: 20px;
+        }
+        .nav-links a {
+            color: #00BFFF;
+            text-decoration: none;
+            margin: 0 15px;
+            font-size: 18px;
+        }
+        .sponsors {
+            margin-top: 40px;
+            font-size: 14px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="content-box">
+            <h1>Willkommen bei AFO - Alternative für Obertrum</h1>
+            <div class="nav-links">
+                <a href="ueber-uns.html" target="_blank">Über uns</a>
+                <a href="statuten.html" target="_blank">Statuten</a>
+                <a href="mitglieder.html" target="_blank">Mitglieder</a>
+                <a href="was-wir-vorhaben.html" target="_blank">Was wir vorhaben</a>
+            </div>
+            <div class="sponsors">
+                <p>Unsere Sponsoren: Spar, Unterbäck</p>
+                <p>Kontakt: <a href="mailto:nico.sbg.5162@gmail.com">nico.sbg.5162@gmail.com</a></p>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Willkommen bei AFO - Alternative für Obertrum</title>
     <style>
         body {
