--- a/index.html
+++ b/index.html
@@ -402,3 +402,17 @@
     </div>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Seite</title>
+</head>
+<body>
+    <h1>Seite in Arbeit</h1>
+    <p>Hier kommt der Inhalt für diese Seite hin.</p>
+    <a href="index.html">Zurück zur Startseite</a>
+</body>
+</html>
